--- a/src/main/resources/static/css/seats/seatReservation.css
+++ b/src/main/resources/static/css/seats/seatReservation.css
@@ -135,7 +135,8 @@
 
 .seat.reserved,
 .seat.disabled {
-  background-color: #eee;
+  background-color: #eee !important;
+  border: 1px solid #ddd;
   cursor: not-allowed;
   color: #999;
   font-weight: bold;
@@ -320,7 +321,6 @@
 .navigation {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
 }
 
 .navigation button {
